--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <meta name="googlebot" content="noindex, nofollow">
 <head>
 <meta content='K@talago Completo' property='og:description'/>
-<title>Miralo Antes que lo Borren</title>
+<title>K@talago Completo</title>
 <meta content='https://i.imgur.com/kQUZW6j.jpg' property='og:image'/>
   <meta charset="UTF-8">
   <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
